spacing issues

--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -218,6 +218,7 @@ body{
        width: 80%;
        height: 300px;
        padding:10%;
+       padding-top: 50px;
        text-align: right;
     }
 
@@ -225,6 +226,7 @@ body{
         width: 80%;
         height: 300px;
         padding: 10%;
+        padding-top: 30px;
         text-align: right;
     }
 
@@ -232,6 +234,7 @@ body{
         width: 80%;
         height: 300px;
         padding: 10%;
+        padding-top: 30px;
         text-align: right;
     }
 
@@ -239,6 +242,7 @@ body{
         width: 80%;
         height: 300px;
         padding: 10%;
+        padding-top: 30px;
         text-align: right;
     }
 
